--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "space-landing-page",
-  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -17,12 +16,14 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.8.2",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.10",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
-    "@types/react": "^18.3.12",
+    "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
