--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@lottiefiles/dotlottie-react": "^0.16.1",
     "aos": "^2.3.4",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.11",
     "motion": "^11.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
