--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "aos": "^2.3.4",
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
+    "lucide-react": "^0.544.0",
     "motion": "^11.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.8.2",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
